# SoapySDR

./: CMakeLists.txt
.github/workflows/: ci.yml
csharp/: CMakeLists.txt  SoapySDRCSharpConfig.cmake
csharp/apps/: CMakeLists.txt  RxSamplesToFileExample.cs  SamplesToFileExample.cs  SiggenExample.cs  SimpleSiggen.cs
csharp/assembly/: ArgInfo.cs  BuildInfo.Assembly.in.cs  CMakeLists.txt  Converter.cs  Device.cs  Logger.cs  RxStream.cs  SoapyConvertible.cs  Stream.cs  TxStream.cs  Utility.cs
csharp/docs/: Doxyfile.in
csharp/scripts/: generate_swig_docstrings.py
csharp/scripts/swigdoc_converter/: documentation.py
csharp/swig/: CMakeLists.txt  CSharpExtensions.hpp  Constants.hpp  Converter.hpp  ConverterInternal.hpp  Device.i  DeviceInternal.hpp  Docs.i  Logger.i  SoapySDR.i  Stream.hpp  Stream.i  TypeConversionInternal.hpp  Types.i  docs.i
csharp/tests/: CMakeLists.txt  TestConverter.cs  TestSoapyTypes.cs  TestStreamingAPI.cs
docs/: CMakeLists.txt
docs/doxygen/: CMakeLists.txt  Doxyfile.in
docs/doxygen-cs/: CMakeLists.txt  Doxyfile.in
luajit/tests/: CMakeLists.txt
scripts/: generate_swig_docstrings.py
scripts/swigdoc_converter/: documentation.py
swig/: CMakeLists.txt
swig/csharp/: CMakeLists.txt
swig/csharp/apps/: CMakeLists.txt  RxSamplesToFileExample.cs  SiggenExample.cs
swig/csharp/assembly/: BuildInfo.Assembly.in.cs  CMakeLists.txt  Logger.cs  RxStream.cs  Stream.cs  TxStream.cs  Utility.cs
swig/csharp/docs/: Doxyfile.in
swig/csharp/swig/: CMakeLists.txt  Device.i  Docs.i  SoapySDR.i  Stream.hpp  Stream.i  Types.i  Utility.hpp
swig/csharp/tests/: CMakeLists.txt  TestBuildInfo.cs  TestDeviceAPI.cs  TestEnumerateDevices.cs  TestLogger.cs  TestSoapyTypes.cs  TestStreamingAPI.cs
swig/octave/: CMakeLists.txt  Constants.hpp  Device.i  Enums.hpp  FindOctave.cmake  Logger.hpp  SoapySDR.i  Streaming.hpp  Types.hpp  Utility.hpp
swig/octave/tests/: CMakeLists.txt  TestBuildInfo.m  TestDeviceAPI.m  TestEnumerateDevices.m  TestErrorCodes.m  TestFormats.m  TestLogger.m  TestManualCppOctaveConversions.cpp  TestSoapyTypes.m  TestTimeConversion.m
swig/octave/tests/old/: CMakeLists.txt  TestBuildInfo.m  TestDeviceAPI.m  TestErrorCodes.m
